konst/tests/misc_tests/misc_nonmacro_ui_tests/array_builder_constructor_type_err.stderr
error[E0271]: type mismatch resolving `<ArrayBuilder<u8, 3, NonDrop> as Identity>::Type == ArrayBuilder<u8, 5, NonDrop>`
 --> tests/misc_tests/misc_nonmacro_ui_tests/array_builder_constructor_type_err.rs:5:13
  |
5 |     let _ = ArrayBuilder::<u8, 3, _>::of_copy::<5>();
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `5`, found `3`
  |
  = note: expected struct `ArrayBuilder<u8, 5, NonDrop>`
             found struct `ArrayBuilder<u8, 3, NonDrop>`
note: required by a bound in `ArrayBuilder::<T, N, NonDrop>::of_copy`
 --> src/array/array_builder.rs
  |
  |     pub const fn of_copy<const N2: usize>() -> Self
  |                  ------- required by a bound in this associated function
...
  |         Self: Identity<Type = ArrayBuilder<T, N2, NonDrop>>,
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ArrayBuilder::<T, N, NonDrop>::of_copy`

error[E0308]: mismatched types
 --> tests/misc_tests/misc_nonmacro_ui_tests/array_builder_constructor_type_err.rs:6:37
  |
6 |     let _: ArrayBuilder<u8, 3, _> = ArrayBuilder::of_copy::<5>();
  |            ----------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `3`, found `5`
  |            |
  |            expected due to this
  |
  = note: expected struct `ArrayBuilder<u8, 3, _>`
             found struct `ArrayBuilder<_, 5, NonDrop>`

error[E0271]: type mismatch resolving `<ArrayBuilder<u8, 3, MayDrop> as Identity>::Type == ArrayBuilder<u8, 5, MayDrop>`
 --> tests/misc_tests/misc_nonmacro_ui_tests/array_builder_constructor_type_err.rs:8:13
  |
8 |     let _ = ArrayBuilder::<u8, 3, _>::of_drop::<5>();
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `5`, found `3`
  |
  = note: expected struct `ArrayBuilder<u8, 5, MayDrop>`
             found struct `ArrayBuilder<u8, 3, MayDrop>`
note: required by a bound in `ArrayBuilder::<T, N, MayDrop>::of_drop`
 --> src/array/array_builder.rs
  |
  |     pub const fn of_drop<const N2: usize>() -> Self
  |                  ------- required by a bound in this associated function
  |     where
  |         Self: Identity<Type = ArrayBuilder<T, N2, MayDrop>>,
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ArrayBuilder::<T, N, MayDrop>::of_drop`

error[E0308]: mismatched types
 --> tests/misc_tests/misc_nonmacro_ui_tests/array_builder_constructor_type_err.rs:9:37
  |
9 |     let _: ArrayBuilder<u8, 3, _> = ArrayBuilder::of_drop::<5>();
  |            ----------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `3`, found `5`
  |            |
  |            expected due to this
  |
  = note: expected struct `ArrayBuilder<u8, 3, _>`
             found struct `ArrayBuilder<_, 5, MayDrop>`
